--- a/index.html
+++ b/index.html
@@ -2,10 +2,27 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>{{ time }} Until Doomsday</title>
+    <title>Time Until Doomsday</title>
   </head>
   <body>
-    Hello World!
+    <div id="doomsdayClock">
+      <span class="days">
+        <span class="number">0</span>
+        <span class="descriptor">days</span>
+      </span>
+      <span class="hours">
+        <span class="number">0</span>
+        <span class="descriptor">hours</span>
+      </span>
+      <span class="minutes">
+        <span class="number">0</span>
+        <span class="descriptor">minutes</span>
+      </span>
+      <span class="seconds">
+        <span class="number">0</span>
+        <span class="descriptor">seconds</span>
+      </span>
+    </div>
     <script src="./index.js" charset="utf-8"></script>
   </body>
 </html>
