--- a/index.html
+++ b/index.html
@@ -3,26 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>Time Until Doomsday</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:900" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <div id="doomsdayClock">
-      <span class="days">
+      <div class="days clockPart">
         <span class="number">0</span>
         <span class="descriptor">days</span>
-      </span>
-      <span class="hours">
+      </div>
+      <div class="hours clockPart">
         <span class="number">0</span>
         <span class="descriptor">hours</span>
-      </span>
-      <span class="minutes">
+      </div>
+      <div class="minutes clockPart">
         <span class="number">0</span>
         <span class="descriptor">minutes</span>
-      </span>
-      <span class="seconds">
+      </div>
+      <div class="seconds clockPart">
         <span class="number">0</span>
         <span class="descriptor">seconds</span>
-      </span>
+      </div>
     </div>
-    <script src="./index.js" charset="utf-8"></script>
+    <script src="./main.js" charset="utf-8"></script>
   </body>
 </html>
