add LAST_WORDS display feature

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <span class="descriptor">seconds</span>
       </div>
     </div>
+    <div id="lastWords"></div>
     <script src="./main.js" charset="utf-8"></script>
   </body>
 </html>
