--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Time Until Marriage</title>
+    <title>Time Until Mawwiage</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:900" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
   </head>
@@ -24,7 +24,7 @@
         <span class="number">0</span>
         <span class="descriptor">seconds</span>
       </div>
-      <p>Until Marriage</p>
+      <p>Until Mawwiage</p>
     </div>
     <div id="lastWords"></div>
     <script src="./main.js" charset="utf-8"></script>
